--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- config start -->
+    <script>
+      window.CONFIG = <%= JSON.stringify(htmlWebpackPlugin.options.__variables__) %>
+    </script>
+    <!-- config end -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
